Fix policy pages text visibility and remove benefits section - Added inline black text styles to all policy page elements - Fixed white-on-white text issues - Removed Top Benefits section from home page

--- a/cookies.html
+++ b/cookies.html
@@ -9,20 +9,8 @@
     <link rel="stylesheet" href="assets/css/educational-design-system.css" />
     <link rel="stylesheet" href="assets/css/educational-overrides.css" />
     <link rel="stylesheet" href="assets/css/dropdown-nav.css" />
-    <style>
-        body { background:#ffffff !important; }
-        .policy { max-width:940px; margin:0 auto; padding:2rem 1rem 3rem; }
-        .policy * { color:#111827 !important; text-shadow:none !important; }
-        .policy header { text-align:center !important; margin-bottom:2rem !important; }
-        .policy header h1 { color:#1e40af !important; font-size:2.25rem !important; font-weight:700 !important; margin:0 0 .5rem 0 !important; }
-        .policy .text-secondary { color:#6b7280 !important; }
-        .prose { text-align:left !important; line-height:1.75; font-size:1rem; }
-        .prose h2, .prose h3, .prose h4 { color:#1e40af !important; margin-top:1.5rem; margin-bottom:.5rem; font-weight:600; }
-        .prose p { margin:.5rem 0 1rem; }
-        .prose ul, .prose ol { list-style:disc; padding-left:1.25rem; margin:.25rem 0 1rem; }
-        .prose li { margin:.35rem 0; }
-        .prose a { color:#1e40af !important; text-decoration:underline; }
-    </style>
+    <link rel="stylesheet" href="assets/css/policy-pages.css" />
+
 </head>
 <body class="is-preload">
     <div id="page-wrapper">
@@ -46,23 +34,23 @@
             <div class="edu-container policy">
                 <header class="text-center mb-6">
                     <h1>Cookie Policy</h1>
-                    <p class="text-secondary">Last updated: August 18, 2025</p>
+                    <p class="text-secondary" style="color: #111827 !important;">Last updated: August 18, 2025</p>
                 </header>
                 <div class="prose">
                     <h3>1. What Are Cookies?</h3>
-                    <p>Cookies are small text files placed on your device to help us provide a better user experience.</p>
+                    <p style="color: #111827 !important;">Cookies are small text files placed on your device to help us provide a better user experience.</p>
                     <h3>2. How We Use Cookies</h3>
                     <ul>
-                        <li><strong>Essential cookies:</strong> ensure the website functions properly.</li>
-                        <li><strong>Analytics cookies:</strong> help us understand traffic and improve services.</li>
-                        <li><strong>Preference cookies:</strong> remember settings (e.g., language).</li>
+                        <li style="color: #111827 !important;"><strong>Essential cookies:</strong> ensure the website functions properly.</li>
+                        <li style="color: #111827 !important;"><strong>Analytics cookies:</strong> help us understand traffic and improve services.</li>
+                        <li style="color: #111827 !important;"><strong>Preference cookies:</strong> remember settings (e.g., language).</li>
                     </ul>
                     <h3>3. Managing Cookies</h3>
-                    <p>You can manage or disable cookies in your browser settings. Disabling some cookies may affect certain features.</p>
+                    <p style="color: #111827 !important;">You can manage or disable cookies in your browser settings. Disabling some cookies may affect certain features.</p>
                     <h3>4. Third‑Party Cookies</h3>
-                    <p>We may use trusted third‑party services such as analytics providers. These providers may set their own cookies.</p>
+                    <p style="color: #111827 !important;">We may use trusted third‑party services such as analytics providers. These providers may set their own cookies.</p>
                     <h3>5. Contact</h3>
-                    <p>Questions? Email us at imathhub@gmail.com.</p>
+                    <p style="color: #111827 !important;">Questions? Email us at imathhub@gmail.com. Official site: <a href="https://mongolpotential.com">mongolpotential.com</a></p>
                 </div>
             </div>
         </section>
