--- a/privacy.html
+++ b/privacy.html
@@ -9,20 +9,8 @@
     <link rel="stylesheet" href="assets/css/educational-design-system.css" />
     <link rel="stylesheet" href="assets/css/educational-overrides.css" />
     <link rel="stylesheet" href="assets/css/dropdown-nav.css" />
-    <style>
-        body { background:#ffffff !important; }
-        .policy { max-width:940px; margin:0 auto; padding:2rem 1rem 3rem; }
-        .policy * { color:#111827 !important; text-shadow:none !important; }
-        .policy header { text-align:center !important; margin-bottom:2rem !important; }
-        .policy header h1 { color:#1e40af !important; font-size:2.25rem !important; font-weight:700 !important; margin:0 0 .5rem 0 !important; }
-        .policy .text-secondary { color:#6b7280 !important; }
-        .prose { text-align:left !important; line-height:1.75; font-size:1rem; }
-        .prose h2, .prose h3, .prose h4 { color:#1e40af !important; margin-top:1.5rem; margin-bottom:.5rem; font-weight:600; }
-        .prose p { margin:.5rem 0 1rem; }
-        .prose ul, .prose ol { list-style:disc; padding-left:1.25rem; margin:.25rem 0 1rem; }
-        .prose li { margin:.35rem 0; }
-        .prose a { color:#1e40af !important; text-decoration:underline; }
-    </style>
+    <link rel="stylesheet" href="assets/css/policy-pages.css" />
+
 </head>
 <body class="is-preload">
     <div id="page-wrapper">
@@ -46,32 +34,33 @@
             <div class="edu-container policy">
                 <header class="text-center mb-6">
                     <h1>Privacy Policy</h1>
-                    <p class="text-secondary">Last updated: August 18, 2025</p>
+                    <p class="text-secondary" style="color: #111827 !important;">Last updated: August 18, 2025</p>
                 </header>
                 <div class="prose">
                     <h3>1. Information We Collect</h3>
                     <ul>
-                        <li><strong>Directly from you:</strong> name, email, and details you provide when signing up or contacting us.</li>
-                        <li><strong>Automatically:</strong> IP address, browser type, and usage data via cookies.</li>
+                        <li style="color: #111827 !important;"><strong>Directly from you:</strong> name, email, and details you provide when signing up or contacting us.</li>
+                        <li style="color: #111827 !important;"><strong>Automatically:</strong> IP address, browser type, and usage data via cookies.</li>
                     </ul>
                     <h3>2. How We Use Your Information</h3>
                     <ul>
-                        <li>To provide educational content and tutoring services.</li>
-                        <li>To improve our platform and personalize your learning experience.</li>
-                        <li>To send updates or reminders (you can opt out anytime).</li>
+                        <li style="color: #111827 !important;">To provide educational content and tutoring services.</li>
+                        <li style="color: #111827 !important;">To improve our platform and personalize your learning experience.</li>
+                        <li style="color: #111827 !important;">To send updates or reminders (you can opt out anytime).</li>
                     </ul>
                     <h3>3. Sharing of Information</h3>
-                    <p>We do not sell your personal data. We may share information with trusted third-party service providers (e.g., hosting, analytics, or payment processors) only as necessary to operate our services.</p>
+                    <p style="color: #111827 !important;">We do not sell your personal data. We may share information with trusted third-party service providers (e.g., hosting, analytics, or payment processors) only as necessary to operate our services.</p>
                     <h3>4. Data Protection</h3>
-                    <p>We use reasonable security measures to protect your data. However, no method of transmission or storage is 100% secure.</p>
+                    <p style="color: #111827 !important;">We use reasonable security measures to protect your data. However, no method of transmission or storage is 100% secure.</p>
                     <h3>5. Your Rights</h3>
-                    <p>Depending on your location (e.g., GDPR, CCPA), you may have rights to access, update, delete, or request a copy of your personal data, and opt out of certain processing. Contact us to exercise your rights.</p>
+                    <p style="color: #111827 !important;">Depending on your location (e.g., GDPR, CCPA), you may have rights to access, update, delete, or request a copy of your personal data, and opt out of certain processing. Contact us to exercise your rights.</p>
                     <h3>6. Children’s Privacy</h3>
-                    <p>Our services are intended for students with parental consent if under 13. We do not knowingly collect personal data from children under 13 without consent.</p>
+                    <p style="color: #111827 !important;">Our services are intended for students with parental consent if under 13. We do not knowingly collect personal data from children under 13 without consent.</p>
                     <h3>7. Changes</h3>
-                    <p>We may update this Policy. Continued use indicates acceptance of changes.</p>
+                    <p style="color: #111827 !important;">We may update this Policy. Continued use indicates acceptance of changes.</p>
+                    <p style="color: #111827 !important;">Official site: <a href="https://mongolpotential.com">mongolpotential.com</a></p>
                     <h3>8. Contact</h3>
-                    <p>Email: imathhub@gmail.com</p>
+                    <p style="color: #111827 !important;">Email: imathhub@gmail.com</p>
                 </div>
             </div>
         </section>
