--- a/terms.html
+++ b/terms.html
@@ -9,21 +9,8 @@
     <link rel="stylesheet" href="assets/css/educational-design-system.css" />
     <link rel="stylesheet" href="assets/css/educational-overrides.css" />
     <link rel="stylesheet" href="assets/css/dropdown-nav.css" />
-    <style>
-        /* Page layout & contrast */
-        body { background:#ffffff !important; }
-        .policy { max-width:940px; margin:0 auto; padding:2rem 1rem 3rem; }
-        .policy * { color:#111827 !important; text-shadow:none !important; }
-        .policy header { text-align:center !important; margin-bottom:2rem !important; }
-        .policy header h1 { color:#1e40af !important; font-size:2.25rem !important; font-weight:700 !important; margin:0 0 .5rem 0 !important; }
-        .policy .text-secondary { color:#6b7280 !important; }
-        .prose { text-align:left !important; line-height:1.75; font-size:1rem; }
-        .prose h2, .prose h3, .prose h4 { color:#1e40af !important; margin-top:1.5rem; margin-bottom:.5rem; font-weight:600; }
-        .prose p { margin:.5rem 0 1rem; }
-        .prose ul, .prose ol { list-style:disc; padding-left:1.25rem; margin:.25rem 0 1rem; }
-        .prose li { margin:.35rem 0; }
-        .prose a { color:#1e40af !important; text-decoration:underline; }
-    </style>
+    <link rel="stylesheet" href="assets/css/policy-pages.css" />
+
 </head>
 <body class="is-preload">
     <div id="page-wrapper">
@@ -47,44 +34,44 @@
             <div class="edu-container policy">
                 <header class="text-center mb-6">
                     <h1>Terms &amp; Conditions</h1>
-                    <p class="text-secondary">Last updated: August 18, 2025</p>
+                    <p class="text-secondary" style="color: #111827 !important;">Last updated: August 18, 2025</p>
                 </header>
                 <div class="prose">
-                    <p>Welcome to <strong>Mongol Potential</strong> (“we,” “our,” or “us”). By accessing or using our website at <a href="https://imathhub.vercel.app">imathhub.vercel.app</a>, you agree to these Terms &amp; Conditions. Please read them carefully.</p>
+                    <p style="color: #111827 !important;">Welcome to <strong>Mongol Potential</strong> ("we," "our," or "us"). By accessing or using our website at <a href="https://mongolpotential.com">mongolpotential.com</a>, you agree to these Terms &amp; Conditions. Please read them carefully.</p>
 
                     <h3>1. Use of Our Website</h3>
                     <ul>
-                        <li>Our website provides educational resources, math content, and tutoring services.</li>
-                        <li>You agree to use our services only for lawful purposes and in compliance with all applicable laws.</li>
-                        <li>You may not copy, redistribute, or commercially exploit our materials without permission.</li>
+                        <li style="color: #111827 !important;">Our website provides educational resources, math content, and tutoring services.</li>
+                        <li style="color: #111827 !important;">You agree to use our services only for lawful purposes and in compliance with all applicable laws.</li>
+                        <li style="color: #111827 !important;">You may not copy, redistribute, or commercially exploit our materials without permission.</li>
                     </ul>
 
                     <h3>2. Accounts &amp; Registration</h3>
                     <ul>
-                        <li>Some features (such as quizzes or tutoring sessions) may require registration.</li>
-                        <li>You are responsible for maintaining the confidentiality of your account information.</li>
+                        <li style="color: #111827 !important;">Some features (such as quizzes or tutoring sessions) may require registration.</li>
+                        <li style="color: #111827 !important;">You are responsible for maintaining the confidentiality of your account information.</li>
                     </ul>
 
                     <h3>3. Tutoring &amp; Educational Services</h3>
                     <ul>
-                        <li>Tutoring sessions are intended for educational purposes only.</li>
-                        <li>We do not guarantee specific academic outcomes or exam results.</li>
+                        <li style="color: #111827 !important;">Tutoring sessions are intended for educational purposes only.</li>
+                        <li style="color: #111827 !important;">We do not guarantee specific academic outcomes or exam results.</li>
                     </ul>
 
                     <h3>4. Intellectual Property</h3>
                     <ul>
-                        <li>All content, including videos, quizzes, problem sets, and articles, is the intellectual property of Mongol Potential unless otherwise credited.</li>
-                        <li>You may use our resources for personal, non-commercial learning.</li>
+                        <li style="color: #111827 !important;">All content, including videos, quizzes, problem sets, and articles, is the intellectual property of Mongol Potential unless otherwise credited.</li>
+                        <li style="color: #111827 !important;">You may use our resources for personal, non-commercial learning.</li>
                     </ul>
 
                     <h3>5. Limitation of Liability</h3>
-                    <p>We strive to provide accurate resources, but we do not guarantee completeness or error-free content. We are not liable for any losses, damages, or academic outcomes arising from use of the website.</p>
+                    <p style="color: #111827 !important;">We strive to provide accurate resources, but we do not guarantee completeness or error-free content. We are not liable for any losses, damages, or academic outcomes arising from use of the website.</p>
 
                     <h3>6. Modifications</h3>
-                    <p>We may update these Terms at any time. Changes will be posted with a new “Last updated” date.</p>
+                    <p style="color: #111827 !important;">We may update these Terms at any time. Changes will be posted with a new "Last updated" date.</p>
 
                     <h3>7. Governing Law</h3>
-                    <p>These Terms are governed by the laws of the State of California, USA, unless otherwise required by applicable law.</p>
+                    <p style="color: #111827 !important;">These Terms are governed by the laws of the State of California, USA, unless otherwise required by applicable law.</p>
                 </div>
             </div>
         </section>
