Home: CTA section background white; Footer: reduce padding and lighten border; Policy pages: inline black text fixes; Remove benefits section

--- a/index.html
+++ b/index.html
@@ -524,10 +524,10 @@
 			</section>
 
 			<!-- Mission for Mongolians Abroad -->
-			<section class="edu-section" style="background: #0b1220;">
+			<section class="edu-section" style="background: #0b1220; border-top: 1px solid #0b1220 !important;">
 				<div class="edu-container">
 					<header class="text-center mb-6" style="color: #fff;">
-						<h2>To the Future of Mongolians Living Abroad</h2>
+						<h2 style="color: white !important;">To the Future of Mongolians Living Abroad</h2>
 						<p class="text-secondary" style="max-width: 760px; margin: 0 auto; color: rgba(255,255,255,0.9) !important;">Many Mongolian children grow up in the United States and across the world. They remain proudly Mongolian—and deserve to be well‑educated, confident, and connected to their heritage. We tailor lessons to what students already study (AP, California Middle School Math, IB, and more), boost grades, and build genuine curiosity and confidence.</p>
 					</header>
 					<div class="edu-grid edu-grid-3">
@@ -819,7 +819,7 @@
 			</section>
 
 			<!-- CTA section -->
-			<section class="edu-section text-center" style="background: var(--color-background-light);">
+			<section class="edu-section text-center" style="background: #ffffff;">
 				<div class="edu-container">
 				<h2>Ready to start your mathematical journey?</h2>
 					<div class="edu-grid edu-grid-2" style="max-width: 600px; margin: var(--space-6) auto 0 auto;">
