--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 						</div>
 						
 						<div class="hero-visual">
-							<div class="mongolian-vertical" aria-hidden="true">ᠣᠯᠠᠨ ᠤᠯᠤᠰ ᠤ᠋ᠨ ᠮᠠᠲ᠋ᠧᠮᠠᠲ᠋ᠢᠭ ᠤ᠋ᠨ ᠲᠥᠪ</div>
+							<div class="mongolian-vertical" aria-hidden="true">ᠮᠣᠩᠭᠣᠯ ᠫᠣᠲ᠋ᠧᠨᠼᠢᠶᠠᠯ ᠠᠻᠠᠳ᠋ᠧᠮᠢ</div>
 							<div class="hero-image-container" style="display:none;">
 									<svg width="500" height="400" viewBox="0 0 500 400" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<defs>
