Update team member profiles in company page
- Enhanced achievement descriptions with more specific medal counts
- Added external links for Bilegjargal (cervyn.com) and Chinguun (GitHub)
- Added Chinguun's AI Engineer role and Math Olympiad achievements
- Improved formatting and clarity of team member credentials

--- a/company.html
+++ b/company.html
@@ -707,27 +707,32 @@
                                 <div class="role">Founder</div>
                                 <p style="color: #374151 !important;">Mathematician with 5+ years of teaching experience. Passionate about mathematical discovery and leading engaging problem‑solving discussions.</p>
                                 <ul style="color:#374151 !important; margin-top:0.75em; padding-left:1.2em; list-style: disc;">
-                                    <li>International Math Competitions — 2× gold, 1× bronze</li>
-                                    <li>National Math Olympiad — silver, bronze</li>
+                                    <li>International Math Olympiads — 2× gold, 1× bronze medal</li>
+                                    <li>National Math Olympiad — 1× silver, 1× bronze medal</li>
                                 </ul>
                             </div>
 
                             <div class="team-member">
                                 <img src="images/billy.png" alt="Bilegjargal Altangerel" class="avatar" style="object-fit: cover;">
                                 <h4>Bilegjargal Altangerel</h4>
-                                <div class="role">Co‑Founder • Physics & Mathematics Specialist</div>
+                                <div class="role">Co‑Founder • Physics & Mathematics Specialist • Founder & Developer @<a href="https://cervyn.com/" target="_blank"> cervyn.com</a></div>
+                                
                                 <p style="color: #374151 !important;">Physics and mathematics specialist with 6+ years of teaching experience, dedicated to making science clear, practical, and inspiring for every learner.</p>
                                 <ul style="color:#374151 !important; margin-top:0.75em; padding-left:1.2em; list-style: disc;">
-                                    <li>National Math Olympiad — silver, bronze</li>
-                                    <li>National Physics Olympiad — 2× bronze</li>
+                                    <li>National Math Olympiad — 1× silver medal, 1× bronze medal</li>
+                                    <li>National Physics Olympiad — 2× bronze medal</li>
                                 </ul>
                             </div>
 
                             <div class="team-member">
                                 <img src="images/chinguun.png" alt="Chinguun Ganbaatar" class="avatar" style="object-fit: cover;">
                                 <h4>Chinguun Ganbaatar</h4>
-                                <div class="role">Co‑Founder • Computer Science & Mathematics Tutor</div>
+                                <div class="role">Co‑Founder • AI Engineer • Computer Science & Mathematics Tutor • <a href="https://github.com/chinguun101" target="_blank">github</a></div>
                                 <p style="color: #374151 !important;">Computer science and mathematics tutor with a portfolio of hands‑on projects. Avid reader who helps students build strong STEM foundations through practical, project‑based learning.</p>
+                                <ul style="color:#374151 !important; margin-top:0.75em; padding-left:1.2em; list-style: disc;">
+                                    <li>International Math Olympiads — 1× gold medal, 1× silver medal, 1× bronze medal</li>
+                        
+                                </ul>
                             </div>
                         </div>
                     </div>
