Update company and index pages with navigation improvements

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                     <div class="edu-grid edu-grid-3">
                         <div class="testimonial-card">
                             <div class="testimonial-content">
-                                <p>"My daughter was struggling to understand mathematics, having a hard time with homework, and wasn't confident going to math class. Now she finishes her homework without problems and is getting straight A's."</p>
+                                <p>"My daughter was struggling to understand mathematics, having a hard time with homework, and wasn't confident going to math class. Now she finishes her homework without problems."</p>
                             </div>
                             <div class="testimonial-author">
                                 <div class="author-avatar">
