--- a/company.html
+++ b/company.html
@@ -704,7 +704,7 @@
                             <div class="team-member">
                                 <img src="images/khas.png" alt="Khas-Ochir Bayarjargal" class="avatar" style="object-fit: cover;">
                                 <h4>Khas-Ochir Bayarjargal</h4>
-                                <div class="role">Founder</div>
+                                <div class="role">Founder • Co-Founder @ <a href="https://polyato.com/" target="_blank">polyato.com</a></div>
                                 <p style="color: #374151 !important;">Mathematician with 5+ years of teaching experience. Passionate about mathematical discovery and leading engaging problem‑solving discussions.</p>
                                 <ul style="color:#374151 !important; margin-top:0.75em; padding-left:1.2em; list-style: disc;">
                                     <li>International Math Olympiads — 2× gold, 1× bronze medal</li>
