Update index page with additional improvements

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                                     </svg>
                                 </div>
                                 <div class="author-info">
-                                    <h4>Misheel's Parent</h4>
+                                    <h4>Misheel's Mom</h4>
                                 </div>
                             </div>
                         </div>
@@ -585,7 +585,7 @@
                                     </svg>
                                 </div>
                                 <div class="author-info">
-                                    <h4>Ari's Parent</h4>
+                                    <h4>Ari's Mom</h4>
                                 </div>
                             </div>
                         </div>
@@ -602,7 +602,7 @@
                                     </svg>
                                 </div>
                                 <div class="author-info">
-                                    <h4>Subedei's Parent</h4>
+                                    <h4>Subedei's Mom</h4>
                                 </div>
                             </div>
                         </div>
